<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:paddingHorizontal="24dp"
    android:orientation="horizontal"
    android:paddingVertical="8dp"
    android:weightSum="1">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/card_image_profile"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/user1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_tv_name"
            style="@style/TextCard.Title"
            android:text="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/company_icon"
                android:src="@drawable/ic_baseline_apartment_24" />

            <TextView
                android:id="@+id/card_tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/company" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>